src/css/_winbox.scss
.winbox {
  position: fixed;
  left: 0;
  top: 0;
  border-radius: 5px;
  overflow: hidden;
  background: color(background-darker);
  box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
  transition: width 0.3s, height 0.3s, transform 0.3s;
  transition-timing-function: cubic-bezier(0.3, 1, 0.3, 1);
  will-change: transform, width, height;
  /* contain "strict" does not make overflow contents selectable */
  contain: layout size;
  /* explicitly set text align to left fixes an issue with iframes alignment when centered */
  text-align: left;
  /* workaround for using passive listeners */
  touch-action: none;
}

.wb-header {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 40px;
  color: color(primary);
  font-weight: 500;
  overflow: hidden;
}

.wb-body {
  position: absolute;
  left: 0;
  right: 0;
  top: 40px;
  bottom: 0;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  overflow-scrolling: touch;
  will-change: contents;
  background: #fff;
  /* when no border is set there is some thin line visible */
  /* always hide top border visually */
  margin-top: 0 !important;
  contain: strict;
}

.wb-title {
  font-family: $font-family;
  font-size: 20px;
  font-weight: 500;
  padding-left: 10px;
  cursor: move;
  height: 40px;
  line-height: 40px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.wb-n {
  position: absolute;
  top: -5px;
  left: 0;
  right: 0;
  height: 10px;
  cursor: n-resize;
}

.wb-e {
  position: absolute;
  top: 0;
  right: -5px;
  bottom: 0;
  width: 10px;
  cursor: w-resize;
}
.wb-s {
  position: absolute;
  bottom: -5px;
  left: 0;
  right: 0;
  height: 10px;
  cursor: n-resize;
}
.wb-w {
  position: absolute;
  top: 0;
  left: -5px;
  bottom: 0;
  width: 10px;
  cursor: w-resize;
}
.wb-nw {
  position: absolute;
  top: -5px;
  left: -5px;
  width: 15px;
  height: 15px;
  cursor: nw-resize;
}
.wb-ne {
  position: absolute;
  top: -5px;
  right: -5px;
  width: 15px;
  height: 15px;
  cursor: ne-resize;
}
.wb-sw {
  position: absolute;
  bottom: -5px;
  left: -5px;
  width: 15px;
  height: 15px;
  cursor: ne-resize;
}
.wb-se {
  position: absolute;
  bottom: -5px;
  right: -5px;
  width: 15px;
  height: 15px;
  cursor: nw-resize;
}
.wb-icon {
  float: right;
  height: 100%;
  max-width: 100%;
  text-align: center;
}
.wb-icon * {
  display: inline-block;
  width: 30px;
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  cursor: pointer;
  max-width: 100%;
}

.wb-min, .wb-max, .wb-full {
  display: none;
}

.wb-close {
  position: relative;
  margin-top: 10px;
  margin-right: 10px;
  width: 20px;
  height: 20px;

  &::before, &::after {
    position: absolute;
    content: '';
    width: 2px;
    background-color: color(primary);
    height: 100%;
    transform: rotate(45deg);
  }

  &::after {
    transform: rotate(-45deg);
  }
}

.winbox.modal .wb-body ~ div,
.winbox.modal .wb-title,
.winbox.min .wb-body ~ div,
.winbox.max .wb-body ~ div {
  pointer-events: none;
}
.winbox.max .wb-title {
  cursor: default;
}
.winbox.min .wb-full,
.winbox.min .wb-min {
  display: none;
}
.winbox.min .wb-title {
  cursor: default;
}
.winbox.min .wb-body > * {
  display: none;
}
.max {
  box-shadow: none;
}
.max .wb-body {
  margin: 0 !important;
}
.winbox iframe {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 0;
}
body.wb-drag .winbox {
  transition: none;
}
body.wb-drag iframe {
  pointer-events: none;
}
.winbox.modal:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: inherit;
  border-radius: inherit;
}
.winbox.modal:after {
  content: '';
  position: absolute;
  top: -100vh;
  left: -100vw;
  right: -100vw;
  bottom: -100vh;
  background: #0d1117;
  animation: fade-in 0.2s ease-out forwards;
  z-index: -1;
}
.winbox.modal .wb-min,
.winbox.modal .wb-max,
.winbox.modal .wb-full {
  display: none;
}
@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 0.85;
  }
}

